--- a/picam.ini
+++ b/picam.ini
@@ -2,13 +2,7 @@
 
 [pis]
 pi_name[0] = pi_one
-pi_camcount[0] = 2
-pi_ip[0] = 192.168.1.100
-pi_login[0] = pi
-pi_pw[0] = dfmadmin
-
-pi_name[1] = pi_two
-pi_camcount[1] = 2
-pi_ip[1] = 192.168.1.100
-pi_login[1] = pi
-pi_pw[1] = dfmadmin
+pi_camcount[0] = 1
+pi_ip[0] = 127.0.0.1
+pi_login[0] = cam1
+pi_pw[0] = "StopDownloading!"
