changed ini defaults

--- a/tipi.ini
+++ b/tipi.ini
@@ -3,6 +3,6 @@
 [pis]
 pi_name[0] = pi_one
 pi_camcount[0] = 2
-pi_ip[0] = 127.0.0.1
-pi_login[0] = cam1
-pi_pw[0] = "StopDownloading!"
+pi_ip[0] = 192.168.70.49
+pi_login[0] = pi
+pi_pw[0] = dfmadmin
